feat: SwingTrader AI v4.3 integration - real market data scan
- Added conviction_engine.py (5-pillar scoring: Trend, Structure, Flow, R:R, Timing)
- Added market_data.py (yfinance: MTF trend, Fib zones, ATR, Ichimoku, volume direction)
- Added swing_scanner.py agent bridging market data + scoring engine
- Added /api/scan endpoint with real yfinance data
- Added /api/prices endpoint for live sidebar prices
- Added ScanDashboard.jsx frontend with conviction table, trade plans, confluence zones
- Fixed TopStocks.jsx: replaced fake hardcoded prices with real yfinance data
- Tab navigation: Council Analyze + Swing Scan v4.3

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 OPENAI_API_KEY=sk-placeholder
 ANTHROPIC_API_KEY=sk-placeholder
+GOOGLE_API_KEY=your-google-api-key-here
 ALPACA_API_KEY=PK-placeholder
 ALPACA_SECRET_KEY=sk-placeholder
