feat: watchlists + trade journal logging
- Added 6 preset watchlists (Mega Cap, Growth, Semis, Energy, S&P Leaders, Full 30)
- Added /api/watchlists endpoints for frontend quick-select
- Scan limit increased from 10 to 30 tickers
- Trade journal: logs every scan to Supabase (or local JSON fallback)
- SQL migration for trade_journal table in docs/
- Watchlist buttons in ScanDashboard UI

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 OPENAI_API_KEY=sk-placeholder
 ANTHROPIC_API_KEY=sk-placeholder
-GOOGLE_API_KEY=your-google-api-key-here
+GOOGLE_API_KEY=your-google-api-key
 ALPACA_API_KEY=PK-placeholder
 ALPACA_SECRET_KEY=sk-placeholder
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_ANON_KEY=your-anon-key
