Signal Tracker v2.0: Full audit trail, gap detection, ATR targets, MAE/MFE, case reports, market context, staleness checks. 15 critical gaps fixed for zero-mistake paper trading.

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,14 @@ data/
 journal/
 create_table.py
 
+# Signals (runtime data, not code)
+signals/active_signals.json
+signals/closed_signals.json
+signals/reports/
+
+# Test files
+test_tracker_v2.py
+
 # Logs
 run.log
 logs/
